Fix loading spinner positioning on mobile

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -24,6 +24,14 @@ body {
     margin-left: 1rem;
 }
 
+.viewport-loader {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1050;
+}
+
 footer {
     color: #fff;
 }
